Fix TypeKit issue on iOS

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,6 +11,7 @@ body {
 	font-family: 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
+	-webkit-text-size-adjust: 100%;
 }
 
 #container {
